[package]
name = "unkai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.66"
dashmap = "5.4.0"
once_cell = "1.14.0"

[dev-dependencies]
tikv-jemallocator = "0.5.0"

[[example]]
name = "collections"
