[package]
name = "unkai"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.66"
dashmap = "5.4.0"
once_cell = "1.14.0"

[dev-dependencies]
criterion = "0.3"
tikv-jemallocator = "0.5.0"

[[bench]]
name = "jemalloc_global"
harness = false

[[bench]]
name = "unkai_jemalloc_global"
harness = false

[[example]]
name = "collections"

[profile.dev]
debug = true

[profile.bench]
debug = true