[package]
name = "unkai"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/waynexia/unkai"
authors = ["Ruihang Xia <unkai@waynest.com>"]
license = "MIT"
keywords = ["allocator"]
categories = ["memory-management"]
readme = "README.md"

[dependencies]
backtrace = "0.3.66"
dashmap = "5.4.0"
once_cell = "1.14.0"

[dev-dependencies]
criterion = "0.3"
tikv-jemallocator = "0.5.0"

[[bench]]
name = "jemalloc_global"
harness = false

[[bench]]
name = "unkai_jemalloc_global"
harness = false

[[example]]
name = "collections"

[[example]]
name = "allocator"

[profile.dev]
debug = true

[profile.bench]
debug = true